# bb_imageanalysis

./: .gitignore  .gitmodules  CMakeLists.txt  Converter.cpp  Converter.h  Localizer.cpp  Localizer.h  README.md
bb_imganalysis/: CMakeLists.txt  DecodingProcess.cpp  DecodingProcess.h
bb_imganalysis/utility/: Export.cpp  Export.h  Logger.h  util.cpp  util.h
src/: BBList.cpp  BBList.h  BoundingBoxesGenerator.cpp  BoundingBoxesGenerator.h  CMakeLists.txt  Decoder.cpp  Decoder.h  DecodingProcess.cpp  DecodingProcess.h  Ellipse.cpp  Grid.cpp  Grid.h  GridFitter.cpp  GridFitter.h  Testgenerator.cpp  Testgenerator.h  Timer.cpp  Timer.h  config.h  serialization.h
src/errorhandler/: Error.cpp  Error.h  Errorhandler.cpp  Errorhandler.h  config.h
src/hiveobserver/: manualGridFitter.cpp  newBeemarker.cpp
src/utility/: Export.cpp  Export.h  Logger.h  serialization.h  util.h
test/: AllTests.cpp  AllTests.h  CMakeLists.txt  ErrorhandlerTest.cpp  ErrorhandlerTest.h  GridFitterTest.cpp  GridFitterTest.h  Helpers.cpp  Helpers.h  Helpers_old.cpp  IntegrationTests.cpp  LocalizerTest.cpp  LocalizerTest.h  RecognizerTest.cpp  RecognizerTest.h  Testgenerator.cpp  Testgenerator.h  config.h
test/data/: settings.json
test/data/Cam2/: Cam_2_20140812151937_834618-Cam_2_20140812151938_096633_FW.tdat
test/data/grid_fitter/ellipses/: Cam_0_20140811001941_429138.jpeg_04_2.txt  Cam_0_20140811001941_429138.jpeg_07_1.txt  Cam_0_20140811001941_429138.jpeg_11_5.txt  Cam_0_20140811001941_429138.jpeg_17_3.txt  Cam_0_20140811001941_429138.jpeg_30_5.txt  Cam_0_20140811001942_515200.jpeg_00_2.txt  Cam_0_20140811001942_515200.jpeg_06_1.txt  Cam_0_20140811001942_515200.jpeg_07_7.txt.REMOVED.git-id  Cam_0_20140811001942_515200.jpeg_08_16.txt.REMOVED.git-id  Cam_1_20140811001938_783986.jpeg_01_10.txt.REMOVED.git-id  Cam_1_20140811001939_320017.jpeg_02_2.txt  Cam_1_20140811001941_211125.jpeg_03_1.txt  Cam_2_20140811001947_778501.jpeg_03_2.txt  Cam_2_20140811001947_778501.jpeg_06_9.txt.REMOVED.git-id  Cam_2_20140811001947_778501.jpeg_08_6.txt.REMOVED.git-id  Cam_2_20140811001947_778501.jpeg_12_1.txt  Cam_2_20140811001947_778501.jpeg_13_3.txt  Cam_2_20140811001949_592605.jpeg_04_5.txt  Cam_2_20140811001949_592605.jpeg_06_3.txt  Cam_2_20140811001949_592605.jpeg_10_8.txt.REMOVED.git-id  Cam_2_20140811001949_592605.jpeg_11_6.txt.REMOVED.git-id  Cam_2_20140811001949_592605.jpeg_13_7.txt.REMOVED.git-id  Cam_2_20140811001949_592605.jpeg_15_4.txt  Cam_2_20140811001949_592605.jpeg_19_9.txt.REMOVED.git-id  Cam_2_20140811001949_867620.jpeg_02_1.txt  Cam_2_20140811001949_867620.jpeg_05_2.txt  Cam_2_20140811001949_867620.jpeg_08_5.txt  Cam_2_20140811001949_867620.jpeg_10_6.txt.REMOVED.git-id
test/data/grid_fitter/grids/: Cam_0_20140811001941_429138.jpeg_04_2.txt  Cam_0_20140811001941_429138.jpeg_07_1.txt  Cam_0_20140811001941_429138.jpeg_08_4.txt  Cam_0_20140811001941_429138.jpeg_09_8.txt  Cam_0_20140811001941_429138.jpeg_10_10.txt  Cam_0_20140811001941_429138.jpeg_11_5.txt  Cam_0_20140811001941_429138.jpeg_15_2.txt  Cam_0_20140811001941_429138.jpeg_17_3.txt  Cam_0_20140811001941_429138.jpeg_25_3.txt  Cam_0_20140811001941_429138.jpeg_27_3.txt  Cam_0_20140811001941_429138.jpeg_30_5.txt  Cam_0_20140811001941_429138.jpeg_33_8.txt  Cam_0_20140811001942_515200.jpeg_00_2.txt  Cam_0_20140811001942_515200.jpeg_02_2.txt  Cam_0_20140811001942_515200.jpeg_05_3.txt  Cam_0_20140811001942_515200.jpeg_06_1.txt  Cam_0_20140811001942_515200.jpeg_07_7.txt  Cam_0_20140811001942_515200.jpeg_08_16.txt  Cam_0_20140811001942_515200.jpeg_09_2.txt  Cam_0_20140811001942_515200.jpeg_12_1.txt  Cam_1_20140811001938_783986.jpeg_01_10.txt  Cam_1_20140811001938_783986.jpeg_02_1.txt  Cam_1_20140811001939_320017.jpeg_01_2.txt  Cam_1_20140811001939_320017.jpeg_02_2.txt  Cam_1_20140811001940_411079.jpeg_01_1.txt  Cam_1_20140811001941_211125.jpeg_02_1.txt  Cam_1_20140811001941_211125.jpeg_03_1.txt  (+30 more)
test/data/grid_fitter_ellipses/: Cam_0_20140811001941_429138.jpeg_01_2.txt  Cam_0_20140811001941_429138.jpeg_02_1.txt  Cam_0_20140811001941_429138.jpeg_03_1.txt  Cam_0_20140811001941_429138.jpeg_05_1.txt  Cam_0_20140811001941_429138.jpeg_06_7.txt.REMOVED.git-id  Cam_0_20140811001941_429138.jpeg_08_4.txt  Cam_0_20140811001941_429138.jpeg_09_8.txt.REMOVED.git-id  Cam_0_20140811001941_429138.jpeg_10_10.txt.REMOVED.git-id  Cam_0_20140811001941_429138.jpeg_12_2.txt  Cam_0_20140811001941_429138.jpeg_13_5.txt.REMOVED.git-id  Cam_0_20140811001941_429138.jpeg_14_4.txt  Cam_0_20140811001941_429138.jpeg_15_2.txt  Cam_0_20140811001941_429138.jpeg_16_6.txt.REMOVED.git-id  Cam_0_20140811001941_429138.jpeg_18_1.txt  Cam_0_20140811001941_429138.jpeg_19_9.txt.REMOVED.git-id  Cam_0_20140811001941_429138.jpeg_20_2.txt  Cam_0_20140811001941_429138.jpeg_21_1.txt  Cam_0_20140811001941_429138.jpeg_22_3.txt  Cam_0_20140811001941_429138.jpeg_23_2.txt  Cam_0_20140811001941_429138.jpeg_24_1.txt  Cam_0_20140811001941_429138.jpeg_25_3.txt  Cam_0_20140811001941_429138.jpeg_26_1.txt  Cam_0_20140811001941_429138.jpeg_27_3.txt  Cam_0_20140811001941_429138.jpeg_28_2.txt  Cam_0_20140811001941_429138.jpeg_29_1.txt  Cam_0_20140811001941_429138.jpeg_31_2.txt  Cam_0_20140811001941_429138.jpeg_32_1.txt  Cam_0_20140811001941_429138.jpeg_33_8.txt.REMOVED.git-id  Cam_0_20140811001941_429138.jpeg_34_1.txt  Cam_0_20140811001941_429138.jpeg_35_1.txt  Cam_0_20140811001942_515200.jpeg_01_1.txt  Cam_0_20140811001942_515200.jpeg_02_2.txt  Cam_0_20140811001942_515200.jpeg_03_1.txt  Cam_0_20140811001942_515200.jpeg_04_7.txt.REMOVED.git-id  Cam_0_20140811001942_515200.jpeg_05_3.txt  Cam_0_20140811001942_515200.jpeg_09_2.txt  Cam_0_20140811001942_515200.jpeg_10_5.txt  Cam_0_20140811001942_515200.jpeg_11_4.txt  Cam_0_20140811001942_515200.jpeg_12_1.txt  Cam_0_20140811001942_515200.jpeg_13_1.txt  (+81 more)
test/data/localizer_configs/: config2.ini  config2_2.ini  config3.ini
test/gtest/: gtest.h.REMOVED.git-id  libgtest.a.REMOVED.git-id
test/testdata/localizer_configs/: config1.ini  config1_2.ini  config1_2_light.ini  config1_2_lighter.ini  config2_3.ini
test/testdata/recognizer_configs/: recognizer2.ini
(+17 files in other folders)
